# Sub-Orbit

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScopeDataFifo.h  SubOrbitParameterSpecs.h  SubOrbitParameters.h  SubOrbitTypes.h
Source/DSP/: LowBandAnalyzer.h  QuadratureAllpassPair.cpp  QuadratureAllpassPair.h  SidechainEnvelopeFollower.h  SubOrbitEngine.cpp  SubOrbitEngine.h
Source/UI/: CRTLookAndFeel.cpp  CRTLookAndFeel.h  FieldMonitorPanel.cpp  FieldMonitorPanel.h  OrbitPanel.cpp  OrbitPanel.h  SidechainPanel.cpp  SidechainPanel.h  TipsOverlay.cpp  TipsOverlay.h  UIConstants.h
packaging/linux/: build-deb.sh
packaging/mac/: distribution.xml  license.html  welcome.html
packaging/mac/scripts-au/: postinstall
packaging/mac/scripts-vst3/: postinstall
packaging/windows/: installer.iss
tests/: LowBandAnalyzerTests.cpp  MonoCheckClickTests.cpp  QuadratureAllpassPairTests.cpp  ScopeDataFifoTests.cpp  SidechainEnvelopeFollowerTests.cpp  SubOrbitEngineTests.cpp  SubOrbitStateTests.cpp  TestHelpers.h
